Update README.md to clarify server setup instructions and enhance organization